# superquery

./: .dockerignore  .gitignore  CONTRIBUTORS.md  Cargo.toml  README.md  package.json
.github/workflows/: benchmark.yml  gh-release.yml  node-docker.yml  pr.yml  publish.yml  query-docker.yml
crates/subql-cli/: Cargo.toml
crates/subql-cli/src/: main.rs
crates/subql-common/: Cargo.toml
crates/subql-common-substrate/: Cargo.toml
crates/subql-common-substrate/src/: lib.rs
crates/subql-common/src/: lib.rs
crates/subql-config/: Cargo.toml
crates/subql-config/src/: db.rs  lib.rs  node.rs
crates/subql-node/: Cargo.toml
crates/subql-node-core/: Cargo.toml
crates/subql-node-core/src/: error.rs  lib.rs  rpc.rs
crates/subql-node-core/src/traits/: blockchain.rs  dispatcher.rs  mod.rs  project.rs  store.rs
crates/subql-node-core/src/types/: block_height_map.rs  header.rs  mod.rs  operation.rs
crates/subql-node/src/: main.rs
crates/subql-query/: Cargo.toml
crates/subql-query/src/: main.rs
crates/subql-store/: Cargo.toml
crates/subql-store/src/: db.rs  ddl.rs  error.rs  introspect.rs  lib.rs  model.rs  naming.rs  schema.rs
crates/subql-store/tests/: data_parity.rs  pg_integration.rs  schema_parity.rs
crates/subql-store/tests/fixtures/: data.expected.json  data.input.json  schema.expected.json  schema.graphql
crates/subql-types/: Cargo.toml
crates/subql-types-core/: Cargo.toml
crates/subql-types-core/src/: lib.rs
crates/subql-types/src/: lib.rs
crates/subql-utils/: Cargo.toml
crates/subql-utils/src/: lib.rs
deploy/: README.md  docker-compose.yml  start.sh
scripts/: build.sh  gen-data-fixture.cjs  gen-schema-fixture.cjs
