# SubQuery — Rust workspace
#
# This Cargo workspace lives alongside the TypeScript monorepo in `packages/`.
# We port package-by-package (strangler-fig): a `crates/*` member replaces its
# `packages/*` counterpart only once it passes the same test vectors. Nothing in
# `packages/` is deleted until its Rust replacement is proven in production.
#
# Dependency edges below mirror the TS package graph:
#   types-core → types
#   utils, types-core → common → common-substrate
#   common, utils, types(-core) → node-core → node
#   utils, common → query
#   common, utils → cli

[workspace]
resolver = "2"
members = [
    "crates/subql-utils",
    "crates/subql-types-core",
    "crates/subql-types",
    "crates/subql-common",
    "crates/subql-common-substrate",
    "crates/subql-config",
    "crates/subql-store",
    "crates/subql-node-core",
    "crates/subql-node",
    "crates/subql-query",
    "crates/subql-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0"
authors = ["SubQuery Pte Ltd authors & contributors"]
repository = "https://github.com/subquery/subql"

# Shared dependency pins. Add real crates here as ports need them; keeping them
# centralized avoids version drift across the workspace.
[workspace.dependencies]
# internal crates (path deps)
subql-utils = { path = "crates/subql-utils" }
subql-types-core = { path = "crates/subql-types-core" }
subql-types = { path = "crates/subql-types" }
subql-common = { path = "crates/subql-common" }
subql-common-substrate = { path = "crates/subql-common-substrate" }
subql-config = { path = "crates/subql-config" }
subql-store = { path = "crates/subql-store" }
subql-node-core = { path = "crates/subql-node-core" }

# third-party — versions verified on crates.io 2026-07-08 (see task plan §5)
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.6", features = ["derive", "env"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "charset", "rustls", "rustls-native-certs"] }
moka = { version = "0.12", features = ["future"] }
sha2 = "0.11"
hex = "0.4"
num-bigint = "0.5"
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
graphql-parser = "0.4"
topological-sort = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
