[package]
name = "subql-cli"
description = "SubQuery command-line interface binary (port of @subql/cli)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "subql"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
subql-common.workspace = true
subql-utils.workspace = true
