[package]
name = "subql-common-substrate"
description = "Substrate-specific common utilities (port of @subql/common-substrate)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
subql-common.workspace = true
subql-types.workspace = true
