[package]
name = "subql-common"
description = "Shared utilities and types (port of @subql/common)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
subql-types-core.workspace = true
subql-utils.workspace = true
