[package]
name = "subql-config"
description = "Node configuration (port of @subql/node-core NodeConfig + yargs)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
