[package]
name = "subql-node-core"
description = "Core chain-agnostic indexing engine (port of @subql/node-core)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "subql-smoke"
path = "src/bin/smoke.rs"

[lints]
workspace = true

[dependencies]
subql-common.workspace = true
subql-types.workspace = true
subql-types-core.workspace = true
subql-utils.workspace = true
subql-config.workspace = true
subql-store.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
