[package]
name = "subql-node"
description = "Substrate SubQuery indexer binary (port of @subql/node)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "subql-node"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
subql-node-core.workspace = true
subql-common-substrate.workspace = true
