[package]
name = "subql-query"
description = "GraphQL query service binary (port of @subql/query)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "subql-query"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
subql-common.workspace = true
subql-utils.workspace = true
