[package]
name = "subql-store"
description = "Store layer: raw-SQL Postgres access, schema, models (port of node-core store)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
subql-config.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
thiserror.workspace = true
tracing.workspace = true
graphql-parser.workspace = true
regex.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }
subql-config.workspace = true
serde.workspace = true
serde_json.workspace = true
