[package]
name = "subql-types-core"
description = "Core type definitions (port of @subql/types-core)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
