[package]
name = "subql-types"
description = "Substrate type definitions (port of @subql/types)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
subql-types-core.workspace = true
